--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: salmon;
     color: firebrick;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h1{
