--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
     background-color: salmon;
     color: firebrick;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Shadows Into Light', cursive;
 }
 
 h1{
     color: sandybrown;
-    
+
 }
 
 p{
