--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: salmon;
     color: firebrick;
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Indie Flower', cursive;
 }
 
 p{
@@ -18,6 +18,7 @@ ol{
 
 h1{
     color: firebrick;
+    font-style: italic;
     font-size: larger;
 }
 
