--- a/style.css
+++ b/style.css
@@ -2,10 +2,17 @@ body{
     background-color: salmon;
     color: firebrick;
     font-family: 'Indie Flower', cursive;
+    font-size: 16px;
+}
+/* website styles */
+
+*{
+    font-size: 100%;
 }
 
 p{
     color: black;
+    line-height: 2;
 }
 
 ul{
@@ -20,5 +27,54 @@ h1{
     color: firebrick;
     font-style: italic;
     font-size: 50px;
+    font-weight: bold;
+    text-align: left;
 }
+
+header h1{
+    text-align: center;
+}
+
+h2{
+    font-size: 40px;
+    font-weight: 700;
+    
+}
+
+h3{
+    font-size: 30px;
+}
+
+h4{
+    font-size: 25px;
+}
+
+h1, h2, h3, h4{
+    font-weight: 500;
+    font-style: italic;
+}
+
+
+
+footer p {
+    font-size: 15px;
+}
+
+section li {
+    color: black;
+}
+
+a{
+    color: red;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
+
+
+
 
