--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* website styles */
 
-body{
+body {
     background-color: salmon;
     color: firebrick;
     font-family: 'Indie Flower', cursive;
@@ -8,24 +8,24 @@ body{
 }
 
 
-*{
+* {
     font-size: 100%;
 }
 
-p{
+p {
     color: black;
     line-height: 2;
 }
 
-ul{
+ul {
     color: black;
 }
 
-ol{
+ol {
     color: black;
 }
 
-h1{
+h1 {
     color: firebrick;
     font-style: italic;
     font-size: 50px;
@@ -33,25 +33,29 @@ h1{
     text-align: left;
 }
 
-header h1{
+header h1 {
     text-align: center;
 }
 
-h2{
+h2 {
     font-size: 40px;
     font-weight: 700;
     
 }
 
-h3{
+h3 {
     font-size: 30px;
 }
 
-h4{
+h4 {
     font-size: 25px;
 }
 
-h1, h2, h3, h4{
+h5 {
+    font-size: 20px;
+}
+
+h1, h2, h3, h4, h5 {
     font-weight: 500;
     font-style: italic;
 }
@@ -67,7 +71,7 @@ section li {
     color: black;
 }
 
-a{
+a {
     color: purple;
     text-decoration: none;
 }
