--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ h1 {
     border-bottom: 7px solid grey;
     background-image: url("images/triangles_pattern.webp");
     background-repeat: repeat;
+    max-width: 100%;
+    padding: 20ox 0;
+    margin: 25px 200px;
 }
 
 body {
@@ -49,27 +52,38 @@ ul, ol {
     font-size: 48px;
 }
 
+h1, h2, h3, h4, h5 {
+    font-weight: 500;
+    font-style: italic;
+}
+
 h2 {
     color: rgb(101, 17, 17);
     background-color: rgb(157, 146, 146);
-    padding: 5px;
+    max-width: 100%;
+    padding: 20px 0;
+    margin: 20px 250px;
     text-align: center;
     font-size: 40px;
     font-weight: 700;
     }
 
-h3 {
-    color: rgb(119, 10, 10);
-    background-color: rgb(94, 89, 89);
-    padding: 5px;
-    text-align: center;
-    font-size: 30px
-}
+    h3 {
+        color: rgb(119, 10, 10);
+        background-color: rgb(94, 89, 89);
+        max-width: 100%;
+        padding: 20ox 0;
+        margin: 25px 150px;
+        text-align: center;
+        font-size: 38px
+    }
 
 h4 {
     color: rgb(137, 11, 11);
     background-color: rgb(103, 103, 103);
-    padding: 6px;
+    max-width: 100%;
+    padding: 20px 0;
+    margin: 20px 300px;
     text-align: center;
     font-size: 27px;
 }
@@ -77,15 +91,11 @@ h4 {
 h5 {
     color: rgb(110, 36, 36);
     background-color: grey;
-    padding: 7px;
+    max-width: 100%;
+    padding: 20px 0;
+    margin: 20px 350px;
     text-align: center;
     font-size: 25px;
-}
-
-h1, h2, h3, h4, h5 {
-    font-weight: 500;
-    font-style: italic;
-    margin: 20px;
 }
 
 .ingredients {
