--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ footer p {
     background-color: grey;
     font-size: 15px;
     margin: auto;
+    text-align: center;
+    background-repeat: no-repeat;
 }
 
 section li {
